--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,11 @@ matrix:
       gemfile: Gemfile.1.8.7
     - rvm: jruby-19mode
       gemfile: Gemfile
-    - rvm: rbx-18mode
-      gemfile: Gemfile.1.8.7
-    - rvm: rbx-19mode
+    - rvm: rbx
       gemfile: Gemfile
 
 branches:
   only:
     - master
 
-script: "bundle exec rake spec"
-
+script: "bundle exec rake test_with_coveralls"
